# libpeas

./: .gitignore  Makefile.am  configure.ac
data/glade/: libpeas-gtk.xml.in
docs/reference/: Makefile.am  libpeas-docs.sgml  libpeas-sections.txt
libpeas/: Makefile.am  peas-dirs.c  peas-engine.c  peas-engine.h  peas-extension-set.c  peas-extension-set.h  peas-extension-subclasses.c  peas-extension-wrapper.c  peas-extension-wrapper.h  peas-plugin-loader-c.c  peas-plugin-loader.c  peas-plugin-loader.h  peas-single-instance.c  peas-single-instance.h
libpeas-gtk/: Makefile.am  peas-gtk-plugin-manager-store.h  peas-gtk-plugin-manager-view.c  peas-gtk-plugin-manager.c  peas-gtk.h
loaders/gjs/: Makefile.am  peas-extension-gjs.c  peas-plugin-loader-gjs.c
loaders/python/: Makefile.am  peas-extension-python.c  peas-plugin-loader-python.c
loaders/seed/: Makefile.am  peas-extension-seed.c  peas-plugin-loader-seed.c
peas-demo/: Makefile.am  peas-demo-window.c  peas-demo.c
tests/: Makefile.tests
tests/libpeas/: Makefile.am  engine.c  extension-c.c  extension-gjs.c  extension-python.c  extension-set.c
tests/libpeas-gtk/: Makefile.am  (+2 more)
tests/libpeas/introspection/: Makefile.am  introspection-signals.c  introspection-signals.h
tests/libpeas/plugins/: Makefile.am
tests/libpeas/plugins/extension-js/: extension-js.js
tests/libpeas/plugins/extension-python/: extension-python.py
tests/libpeas/plugins/single-instance/: Makefile.am  single-instance-plugin.c  single-instance-plugin.h  single-instance.plugin
tests/libpeas/testing/: Makefile.am  testing-extension.c  testing-extension.h
(+5 files in other folders)
